fix: install path and change shell