@@ -1,14 +1,14 @@
 #!/bin/bash
 
 # Update system
-# sudo apt update && sudo apt upgrade -y
+sudo apt update && sudo apt upgrade -y
 
-# Install Java (OpenJDK 11)
-# sudo apt install -y openjdk-11-jdk wget ssh
+# Install Java (OpenJDK 8)
+sudo apt install -y openjdk-8-jdk wget ssh
 
 # Setup Java environment
-echo "export JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64" >> ~/.zshrc
-echo "export PATH=\$PATH:\$JAVA_HOME/bin" >> ~/.zshrc
+echo "export JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64" >> ~/.bashrc
+echo "export PATH=\$PATH:\$JAVA_HOME/bin" >> ~/.bashrc
 
 # Create Hadoop user (optional)
 # sudo adduser hadoopuser
@@ -16,7 +16,7 @@ echo "export PATH=\$PATH:\$JAVA_HOME/bin" >> ~/.zshrc
 # su - hadoopuser
 
 # Variables
-HADOOP_DIR=/media/holiq/disk_ssd/Linux
+HADOOP_DIR=/usr/local
 HADOP_NAME=hadoop
 HADOOP_VERSION=3.4.1
 HADOOP_HOME=${HADOOP_DIR}/${HADOP_NAME}
@@ -54,7 +54,7 @@ fi
 sudo chown -R $(whoami):$(whoami) "$HADOOP_HOME"
 
 # Set Hadoop environment variables
-cat <<EOF >> ~/.zshrc
+cat <<EOF >> ~/.bashrc
 
 # Hadoop Environment Variables
 export HADOOP_HOME=$HADOOP_HOME
@@ -132,12 +132,10 @@ EOF
 
 # Set JAVA_HOME in hadoop-env.sh
 sed -i 's|^# export JAVA_HOME=.*|export JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64|' $HADOOP_HOME/etc/hadoop/hadoop-env.sh
-# Add this if yarn not started and use java 11 above on bottom of hadoop-env.sh
-# export HADOOP_OPTS="$HADOOP_OPTS --add-opens=java.base/java.lang=ALL-UNNAMED"
 
 echo -e "\n[SUCCESS] Hadoop ${HADOOP_VERSION} has been installed and configured successfully!"
 echo -e "Next Steps:"
-echo -e "- Open a new terminal or run 'source ~/.zshrc' to apply changes."
+echo -e "- Open a new terminal or run 'source ~/.bashrc' to apply changes."
 echo -e "- Format the HDFS namenode by running: hdfs namenode -format"
 echo -e "- Start Hadoop daemons using: start-dfs.sh && start-yarn.sh"
 echo -e "- Check the Hadoop web UI at http://localhost:9870 for HDFS and http://localhost:8088 for YARN."
